# coptic

./: .checkmake  .csslintrc  .env  .env_INFO  .gitignore  .helpers  .jshintrc  .pre-commit-config.yaml  .yamlfmt  .yamllint  Makefile  README.md  TEMPLATE-secrets.sh  TEMPLATE_secrets.sh  TEMPLATE_vault.sh  bun.ts  bunfig.toml  convert.sh  doctoc_readme.sh  env.sh  eslint.config.js  eslint.config.mjs  install.sh  package-lock.json  package.json  playwright.config.ts  profile.sh  py_profile.sh  pylintrc  pyproject.toml  python_unittest.sh  requirements.in  requirements.txt  setup.py  stats.py  stats.sh  stats.tsv  tidy_config.txt  timestamp  timestamp.txt  (+8 more)
archive/: Makefile  crop_y.sh  download_gsheet.py
archive/marcion-1.8.3-src/djview410/: CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  djview.1  djview.cpp  djview.pro  qdjview.cpp  qdjview.h  qdjviewdialogs.cpp  qdjviewexporters.cpp  qdjviewplugin.cpp  qdjviewplugin.h  qdjviewprefs.cpp  qdjviewprefs.h  qdjviewsidebar.cpp  qdjviewsidebar.h  qdjvu.cpp  qdjvu.h  qdjvunet.cpp  qdjvuwidget.cpp  qdjvuwidget.h  qdjvuwidget.qrc  version.h
archive/marcion-1.8.3-src/ibycus/: CMakeLists.txt  IbycusAuthTab.cpp  IbycusAuthTab.h  IbycusAuthTabAuthor.cpp  IbycusAuthTabAuthor.h  IbycusAuthTabCorpus.cpp  IbycusAuthTabCorpus.h  IbycusCit.h  IbycusDefs.h  IbycusException.h  IbycusFile.cpp  IbycusFile.h  IbycusFileException.h  IbycusId.cpp  IbycusId.h  IbycusIdException.cpp  IbycusIdException.h  IbycusIdFile.cpp  IbycusIdFile.h  IbycusIdNumber.cpp  IbycusIdNumber.h  IbycusIdt.cpp  IbycusIdt.h  IbycusIdtAuth.cpp  IbycusIdtAuth.h  IbycusIdtSection.cpp  IbycusIdtSection.h  IbycusIdtWork.cpp  IbycusIdtWork.h  IbycusNoId.h  IbycusParseException.h  IbycusString.h  IbycusTxtFile.cpp  IbycusTxtFile.h  IbycusTxtLine.cpp  IbycusTxtLine.h  ibycus.pro
aws/: TIMESTAMP  publish.sh
bible/: README.md  author.py  bible.py  gen.py  gen_csv.py  gen_sources.py  (+8 more)
(+48553 files in other folders)
