cmake_minimum_required(VERSION 2.8)
project (Ibycus)

add_library(ibycus STATIC IbycusAuthTabAuthor.cpp IbycusId.cpp IbycusIdtAuth.cpp IbycusTxtFile.cpp IbycusAuthTabCorpus.cpp IbycusIdException.cpp IbycusIdt.cpp IbycusTxtLine.cpp IbycusAuthTab.cpp IbycusIdFile.cpp IbycusIdtSection.cpp IbycusFile.cpp IbycusIdNumber.cpp IbycusIdtWork.cpp)
